Updates package json to run all tests and makes examples for exercise 3 clearer

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tdd-style-katas-js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --watchAll"
   },
   "devDependencies": {
     "jest": "^27.3.1"
